--- a/templates/blog/add.html.twig
+++ b/templates/blog/add.html.twig
@@ -10,6 +10,9 @@
 	<div class="col-12 mb-3">
 		{{ form_label(form.title) }}
 		{{ form_widget(form.title, {'attr': {'class': 'form-control', 'placeholder': 'Titre de l\'article'}}) }}
+<span class="text-danger">{{form_errors(form.title)}}</span>
+
+
 		</div>
 		<div class="col-12 mb-3">
 			 {{ form_label(form.categories) }}
@@ -22,6 +25,11 @@
 		{{ form_widget(form.isPublished, {'attr': {'class': 'form-check-input', 'placeholder': 'Titre de l\'article'}}) }}
 			 {{ form_label(form.isPublished) }}
 		</div>
+<div class="d-flex justify-content-end">
+	<button class="btn btn-primary btn-lg" type="submit">Enregistrer</button>
+</div>
+
+
 		{{form_end(form)}}
 	</div>
 {% endblock %}
