--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -3,39 +3,45 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>blog/{{slug}}</h1>
+				<h1>
+					<a href="/" class="text-decoration-none">&#8592;</a>
+					{{article.title}}
+				</h1>
 				<div class="card w-100">
-					<img src="https://picsum.photos/2000" class="card-img-top" alt="card-title" height="500px">
+					<img src={{asset('uploads/' ~ article.picture)}} class="card-img-top" alt="card-title" height="500px">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
+						<h5 class="card-title">{{article.title}}</h5>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						{{article.content}}
 						</p>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							<br>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						</p>
 					</div>
 				</div>
