ajoute un footer

--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h1>
-					<a href="/" class="text-decoration-none">&#8592;</a>
+					<a href="/" class="text-decoration-none text-dark">&#8592;</a>
 					{{article.title}}
 				</h1>
 				<div class="card w-100">
