--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,6 +33,16 @@
 		</header>
 		<main class="container-fluid py-4"> {% block content %}{% endblock %}
 			</main>
+			<footer class="bg-dark py-4  text-white d-flex justify-content-between px-5">
+				<p class="m-0">© 2022
+					<a href="/" class="text-white" translate="no">Symfony blog.
+					</a>
+					Tous Droits Réservés.</p>
+				<p class="m-0">Développé par
+					<a href="https://github.com/alphakahere" class="text-white">alphakahere</a>
+				</p>
+			</footer>
+
 			{% block javascripts %}
 				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 			{% endblock %}
