--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -12,7 +12,7 @@
 					<div class="card-body">
 						<h5 class="card-title">{{article.title}}</h5>
 						<p class="card-text">{{article.content}}</p>
-						<a href="/show/{{article.id}}" class="btn btn-primary">Detail</a>
+						<a href="/show/{{article.id}}" class="btn btn-dark">Detail</a>
 					</div>
 				</div>
 			</div>
